<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quirostelia</string>
    <string name="title_cliente_detail">Detalles de los contactos</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="direccion">Dirección/Localidad/provincia/CP</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="profesion">Profesión</string>
    <string name="actividadFisica">Actividad física</string>
    <string name="alergias">Alergias</string>
    <string name="observaciones">Observaciones</string>
    <string name="motivosDeConsulta">Motivos de consulta</string>
    <string name="cp">Código postal</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="enfermedades">Enfermedades relevantes</string>
    <string name="descripciónFotoPaciente">Foto del paciente</string>
    <string name="estadoDeSaludGeneral">Estado de Salud general</string>
    <string name="cuantificacionDolor">Cuantificación del dolor</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="postratamiento">Postratamiento</string>
    <string name="numeroSesion">Numero de sesión</string>
    <string name="ingreso">Ingreso</string>
    <string name="fecha">Fecha</string>
    <string name="motivoConsulta">Descripción del motivo de consulta</string>
    <string name="comienzoDolor">Comienzo del dolor</string>
    <string name="estadoSalud">Evaluación estado de Salud general</string>
    <string name="activFisica">Actividad física</string>
    <string name="diagnosticoGeneral">Diagnóstico general</string>
    <string name="test">Medium Text</string>
    <string name="NúmeroSesion">Número de sesión</string>

    <string-array name="BaseDeDatosNoEncontrada">
        <item>crear nueva base de datos</item>  <!-- Item num 0 -->
        <item>importar desde archivo</item>     <!-- Item num 1 -->
    </string-array>

</resources>
