<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/NúmeroSesion" />

    <dan.android.quirogest.views.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewNumeroSesion"
        android:text="prueba prueba" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/diagnostico" />

    <dan.android.quirogest.views.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewDiagnostico"
        android:text="prueba prueba" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/cuantificacionDolor" />

    <dan.android.quirogest.views.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewCuantificacionDolor"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/observaciones" />

    <dan.android.quirogest.views.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewObservaciones"
        android:text="prussda" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/ingreso" />

    <dan.android.quirogest.views.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewPrecio"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/fecha" />

    <dan.android.quirogest.views.LabelView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewFecha"
        android:text="prueba(debuj)" />



</LinearLayout>