<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="31/12/21013"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/motivoConsulta"/>
    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="debug"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/comienzoDolor"/>
    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewComienzoDolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="debug"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/estadoSalud"/>
    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewEstadoSalud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="debug"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/activFisica"/>
    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewActividadFisica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="debug"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/diagnosticoGeneral"/>
    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewDiagnostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="debug"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/observaciones"/>
    <dan.android.quirogest.views.LabelView
        android:id="@+id/textViewObservaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:text="debug"/>

</LinearLayout>