<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/diagnostico" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewDiagnostico"
        android:text="prueba(debug)esta es la prueba de la verdad, a ver si ahora se corta bien la frase esta es la prueba de la verdad, a ver si ahora se corta bien la frase" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/cuantificacionDolor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewCuantificacionDolor"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/observaciones" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewObsservaciones"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/postratamiento" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewPostratamiento"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/numeroSesion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewNumSesion"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/precio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewPrecio"
        android:text="prueba(debuj)" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Etiqueta"
        android:text="@string/fecha" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/EditTextOff"
        android:id="@+id/textViewFecha"
        android:text="prueba(debuj)" />

</LinearLayout>